--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,10 +15,10 @@ RUN apt install -y libgl1-mesa-glx
 
 
 COPY . .
-RUN python manage.py makemigrations
+
 
 
 EXPOSE 8000
 
 
-CMD ["python" ,"manage.py" ,"migrate" && "python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python" ,"manage.py" ,"makemigrations" && "python" ,"manage.py" ,"migrate" && "python", "manage.py", "runserver", "0.0.0.0:8000"]
